# shaarit

./: README.md  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  setup.cfg
shaarit/: config.py  forms.py  hashed_url.py  middleware.py  models.py  shaarli.py  template_filters.py  views.py
shaarit/templates/: base.html
shaarit/templates/shaarit/: daily_list.html  links_detail.html  links_form.html  links_item.html  links_list.html  links_pagination.html  links_tags.html  search.html  tags_list.html
