[metadata]
name=shaarit
description="ShaarIt: Share your thoughts, links, ideas, notes. self-hosting bookmarks and micro blogging. If you ever wanted Shaarli in python (w/ starlette), that's it ^_*"
author=폭스마스크
author_email=foxmask+git@pm.me
url=https://github.com/foxmask/shaarit/
long_description=file: README.md
long_description_content_type=text/markdown
license=WTFPL
keywords=python starlette shaarli
version=attr: shaarit.__version__

classifiers=
    Development Status :: 4 - Beta
    Environment :: Web Environment
    License :: WTFPL
    Operating System :: OS Independent
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Internet
    Topic :: Communications
    Topic :: Database

project_urls =
    Documentation = https://github.com/foxmask/shaarit/wiki
    Source = https://github.com/foxmask/shaarit/
    Tracker = https://github.com/foxmask/shaarit/issues

[options]
python_requires=>=3.10
packages=find:
include_package_data=true
zip_safe=false


install_requires=
    starlette==0.42.0
    starlette-wtf==0.4.5
    uvicorn==0.34.0
    tortoise-orm==0.23.0
    Markdown==3.7
    Pygments==2.18.0
    rich==13.9.4
    python-slugify==8.0.4
    Jinja2==3.1.5



[options.packages.find]
exclude=
    tests

[flake8]
max-line-length=119
exclude=.tox,build,.git
ignore = E402, F401
